exports[`MessageComposer component snapshot tests handles value change properly 1`] = `
<div
  className="message-composer">
  <textarea
    className="textarea"
    onChange={[Function bound handleChange]}
    onKeyDown={[Function bound handleKeyDown]}
    onSubmit={[Function handleSubmit]}
    placeholder="Message Placeholder"
    rows={1}
    value={undefined} />
</div>
`;

exports[`MessageComposer component snapshot tests handles value change properly 2`] = `
<div
  className="message-composer">
  <textarea
    className="textarea"
    onChange={[Function bound handleChange]}
    onKeyDown={[Function bound handleKeyDown]}
    onSubmit={[Function handleSubmit]}
    placeholder="Message Placeholder"
    rows={1}
    value="abc123" />
</div>
`;

exports[`MessageComposer component snapshot tests renders properly 1`] = `
<div
  className="message-composer">
  <textarea
    className="textarea"
    onChange={[Function bound handleChange]}
    onKeyDown={[Function bound handleKeyDown]}
    onSubmit={[Function handleSubmit]}
    placeholder="Message Placeholder"
    rows={1}
    value={undefined} />
</div>
`;
